# clnkr

./: .gitignore  AGENTS.md  README.md  flake.nix
backend/: Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 0000__init.up.sql  0001__transcription_file_name.up.sql  0002__transcription_chunks.up.sql
backend/src/: constants.rs  lib.rs  logger.rs  main.rs  streaming.rs
backend/src/api/: app.rs  handlers.rs  middleware.rs  mod.rs  router.rs  utils.rs
backend/src/audio/: chunker.rs
backend/src/db/: core.rs
backend/src/gemini/: client.rs  common.rs  mod.rs
backend/src/llm/: common.rs  gemini.rs  mod.rs  openrouter.rs  provider.rs
backend/src/transcribe/: chunked.rs  mod.rs  stitcher.rs
backend/src/types/: common.rs  mod.rs  overlap.rs  reading.rs  transcript.rs  translate.rs
docs/: openapi_v1.json  structured_output.json
frontend/: TODO.md  next.config.ts  package.json  tsconfig.tsbuildinfo
frontend/app/: constants.ts  globals.css  layout.tsx  page.tsx  types.ts
frontend/app/components/: AuthGate.tsx  FallbackModal.tsx  Footer.tsx  Header.tsx  HelpModal.tsx  LogoAnimation.tsx  SegmentView.tsx  Sidebar.tsx  TranslationPanel.tsx
frontend/app/hooks/: usePlayback.ts  useTranscription.ts  useTranslation.ts
frontend/app/lib/: auth.ts  utils.ts
frontend/public/: mock1.json  mock2.json
