[package]
name = "transcriber-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart"] }
futures = "0.3.32"
gemini-client-api = "7.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
dashmap = "6.1.0"
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
axum-extra = { version = "0.12.5", features = ["typed-header", "multipart"] }
uuid = { version = "1.23.0", features = ["v4"] }
sha2 = "0.11.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
async-stream = "0.3.6"
hex = "0.4.3"
base64 = "0.22"
mime = "0.3"
